Revert "added extent report, sure-fireplugin and fixed mvn command issues"
This reverts commit 532198302664ce150871fbb839b751639fae7ea3.